force-app/main/default/objects/Account/fields/ABN__c.field-meta.xml
<CustomField>
    <fullName>ABN__c</fullName>
    <description>BG 18/11 - Field updated to allow for 14 Char to allow for spaces as per ABR website format.</description>
    <label>ABN</label>
    <length>14</length>
    <type>Text</type>
</CustomField>