force-app/main/default/objects/Account/fields/AccountSource__c.field-meta.xml
<CustomField>
    <fullName>AccountSource__c</fullName>
    <description>MPB - Retrieve the value of standard field AccountSource used to filter out MPB Accounts</description>
    <formula>TEXT(AccountSource)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AccountSource</label>
    <type>Text</type>
</CustomField>