force-app/main/default/objects/Account/fields/Additional_Attributes__c.field-meta.xml
<CustomField>
    <fullName>Additional_Attributes__c</fullName>
    <description>Requested and owned by Christopher Doyle 
Customer &amp; Market Analyst 
Customer Data &amp; Insights.</description>
    <inlineHelpText>Requested and owned by Christopher Doyle 
Customer &amp; Market Analyst 
Customer Data &amp; Insights</inlineHelpText>
    <label>Additional Attributes</label>
    <type>TextArea</type>
</CustomField>