force-app/main/default/objects/Account/fields/Additional_Insurance_Special_Condition__c.field-meta.xml
<CustomField>
    <fullName>Additional_Insurance_Special_Condition__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Licensee required to maintain additional insurance?</description>
    <inlineHelpText>Is Licensee required to maintain additional insurance?</inlineHelpText>
    <label>Additional Insurance Special Condition</label>
    <type>Checkbox</type>
</CustomField>