force-app/main/default/objects/Account/fields/Annual_Sales_Turnover__c.field-meta.xml
<CustomField>
    <fullName>Annual_Sales_Turnover__c</fullName>
    <description>Phase 1 - Marketing Characteristics</description>
    <label>Annual Sales/Turnover</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>