force-app/main/default/objects/Account/fields/APLAC_Member__c.field-meta.xml
<CustomField>
    <fullName>APLAC_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Partner APLAC Member?</description>
    <inlineHelpText>Is Partner APLAC Member?</inlineHelpText>
    <label>APLAC Member</label>
    <type>Checkbox</type>
</CustomField>