force-app/main/default/objects/Account/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <description>Partner Info</description>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>First Reminder Sent</fullName>
            </value>
            <value>
                <fullName>Second Reminder Sent</fullName>
            </value>
            <value>
                <fullName>Final Reminder Sent</fullName>
            </value>
            <value>
                <fullName>Suspend With Fees Start Approved</fullName>
            </value>
            <value>
                <fullName>Suspend Without Fees Start Approved</fullName>
            </value>
            <value>
                <fullName>Suspend End Approved</fullName>
            </value>
            <value>
                <fullName>Cease Approved</fullName>
            </value>
            <value>
                <fullName>Pending Cease Approval</fullName>
            </value>
            <value>
                <fullName>Pending Not Activated Approval</fullName>
            </value>
            <value>
                <fullName>Not Activated Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>