force-app/main/default/objects/Account/fields/APT_Eligible_APPC_Tier__c.field-meta.xml
<CustomField>
	<fullName>APT_Eligible_APPC_Tier__c</fullName>
	<description>Eligible APPC tier (part of compass price management data)</description>
	<label>Eligible APPC Tier (Depreciated)</label>
	<type>Picklist</type>
	<valueSet>
		<restricted>true</restricted>
		<valueSetName>APT_Customer_Tier</valueSetName>
	</valueSet>
</CustomField>