force-app/main/default/objects/Account/fields/APT_Min_Spend_Per_Annum__c.field-meta.xml
<CustomField>
    <fullName>APT_Min_Spend_Per_Annum__c</fullName>
    <description>Minimum spend per annun (part of compass price management data)</description>
    <label>Min Spend Per Annum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>