force-app/main/default/objects/Account/fields/Archiving_Flag__c.field-meta.xml
<CustomField>
    <fullName>Archiving_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Archiving Flag</label>
    <type>Checkbox</type>
</CustomField>