force-app/main/default/objects/Account/fields/Assignment_Effective_From_Date__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Effective_From_Date__c</fullName>
    <description>The date the licensee assignment is effective from.</description>
    <label>Assignment Effective From Date</label>
    <type>Date</type>
</CustomField>