force-app/main/default/objects/Account/fields/Assignment_Effective_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Effective_To_Date__c</fullName>
    <description>The date the licensee assignment is effective to.</description>
    <label>Assignment Effective To Date</label>
    <type>Date</type>
</CustomField>