force-app/main/default/objects/Account/fields/Billing_DPID__c.field-meta.xml
<CustomField>
    <fullName>Billing_DPID__c</fullName>
    <inlineHelpText>The DPID associated with the Organisation or Individual&apos;s billing address.</inlineHelpText>
    <label>Billing DPID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>