force-app/main/default/objects/Account/fields/BillingStreet2__c.field-meta.xml
<CustomField>
    <fullName>BillingStreet2__c</fullName>
    <label>Billing Street 2</label>
    <type>TextArea</type>
</CustomField>