force-app/main/default/objects/Account/fields/Business_at_Risk__c.field-meta.xml
<CustomField>
    <fullName>Business_at_Risk__c</fullName>
    <formula>IF( AtRiskBusinessCount__c &gt; 0, IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;),
IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;Green&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business at Risk</label>
    <type>Text</type>
</CustomField>