force-app/main/default/objects/Account/fields/Business_Delivery_Points_Excess_Rate__c.field-meta.xml
<CustomField>
    <fullName>Business_Delivery_Points_Excess_Rate__c</fullName>
    <description>The agreed rate per delivery point per annum which is paid to a licensee for the delivery of mail for each business delivery point in excess of 400 points</description>
    <label>Business Delivery Points Excess Rate</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>