force-app/main/default/objects/Account/fields/Business_Sales_Target_List__c.field-meta.xml
<CustomField>
    <fullName>Business_Sales_Target_List__c</fullName>
    <description>This field identifies customers that Sales Teams will be contacting as part of their territory plans
Used by Sales Ops Super users only - visible to all internal users</description>
    <inlineHelpText>This field identifies customers that Sales Teams will be contacting as part of their territory plans</inlineHelpText>
    <label>Business Sales - Target List</label>
    <length>80</length>
    <type>Text</type>
</CustomField>