force-app/main/default/objects/Account/fields/Business_Solutions_Customer__c.field-meta.xml
<CustomField>
    <fullName>Business_Solutions_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>StarTrack: Flag to capture if customer is type Business Solutions</description>
    <label>Business Solutions Customer</label>
    <type>Checkbox</type>
</CustomField>