force-app/main/default/objects/Account/fields/Case_Safe_Id__c.field-meta.xml
<CustomField>
    <fullName>Case_Safe_Id__c</fullName>
    <description>Field returns the 18 char case insensitive Id, for use in reports and other extracts that return the 15 char Id in the native Id field.</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Safe Id</label>
    <type>Text</type>
</CustomField>