force-app/main/default/objects/Account/fields/Completed_Change_Request__c.field-meta.xml
<CustomField>
    <fullName>Completed_Change_Request__c</fullName>
    <label>Completed Change Request</label>
    <summaryFilterItems>
        <field>Segmentation_Change_Request__c.Approval_Status__c</field>
        <operation>equals</operation>
        <value>Processed</value>
    </summaryFilterItems>
    <summaryForeignKey>Segmentation_Change_Request__c.Organisation__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>