force-app/main/default/objects/Account/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <description>Phase 1 - Marketing Characteristics</description>
    <label>Contract Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>