force-app/main/default/objects/Account/fields/Conveyancer_Is_a__c.field-meta.xml
<CustomField>
    <fullName>Conveyancer_Is_a__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check to generate the unique Conveyancer Number for this Organisation. Only do this once.</description>
    <inlineHelpText>Check to generate the unique Conveyancer Number for this Organisation. Only do this once.</inlineHelpText>
    <label>Is a Conveyancer?</label>
    <type>Checkbox</type>
</CustomField>