force-app/main/default/objects/Account/fields/Conveyancer_Number__c.field-meta.xml
<CustomField>
    <fullName>Conveyancer_Number__c</fullName>
    <description>Australia Post Conveyancer Number, unique set by adding a role of type &quot;Conveyancer&quot;.</description>
    <inlineHelpText>Australia Post Conveyancer Number, unique set by adding a role of type &quot;Conveyancer&quot;.</inlineHelpText>
    <label>Conveyancer Number</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>