force-app/main/default/objects/Account/fields/Conveyancer_Transaction_Fee__c.field-meta.xml
<CustomField>
    <fullName>Conveyancer_Transaction_Fee__c</fullName>
    <description>Used in the Conveyancer Onboarding Process</description>
    <label>Transaction Fee</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>