force-app/main/default/objects/Account/fields/Count_of_Inactive_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Inactive_Contacts__c</fullName>
    <description>Counts all Contact Maintained By = Account Manager contacts on Org that have Status = Inactive
Trigger: ContactSumTrigger on Contact object</description>
    <inlineHelpText>All AM Maintained Contacts must have their Status set to Active.</inlineHelpText>
    <label>AM Maintained Not Active</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>