force-app/main/default/objects/Account/fields/Count_of_No_Job_Title_Contact__c.field-meta.xml
<CustomField>
    <fullName>Count_of_No_Job_Title_Contact__c</fullName>
    <description>Counts all Contact Maintained By = Account Manager contacts on Org that have no Job Title filled in.
Trigger: ContactSumTrigger on Contact object</description>
    <inlineHelpText>AM Maintained Contacts with no job title entered.</inlineHelpText>
    <label>No Job Title</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>