force-app/main/default/objects/Account/fields/CoverageIndicatorRedFlags__c.field-meta.xml
<CustomField>
    <fullName>CoverageIndicatorRedFlags__c</fullName>
    <formula>1</formula>
    <inlineHelpText>This field is still being implemented and is not functioning correctly</inlineHelpText>
    <label>Coverage Indicator Red Flags</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>