force-app/main/default/objects/Account/fields/CoverageMethod__c.field-meta.xml
<CustomField>
    <fullName>CoverageMethod__c</fullName>
    <description>.</description>
    <inlineHelpText>The method via which the sales relationship is managed</inlineHelpText>
    <label>Coverage Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone Call</fullName>
            </value>
            <value>
                <fullName>Face to Face Meeting</fullName>
            </value>
            <value>
                <fullName>Web Meeting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>