force-app/main/default/objects/Account/fields/Customer_Account_Group__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account_Group__c</fullName>
    <formula>CASE(Role_Type_Roll_Up__c,
&apos;Prospect&apos;, &apos;ZCU0&apos;,
&apos;Customer&apos;, &apos;ZCUS&apos;,
&apos;Known&apos;, &apos;ZKNO&apos;,&apos;&apos;
)</formula>
    <label>Customer Account Group</label>
    <type>Text</type>
</CustomField>