force-app/main/default/objects/Account/fields/Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Number__c</fullName>
    <description>djk 07/10/2011 rolls up customer number from Role object</description>
    <label>Customer Number</label>
    <summarizedField>Organisation_Role__c.Customer_Number_Rollup__c</summarizedField>
    <summaryFilterItems>
        <field>Organisation_Role__c.Role_Type__c</field>
        <operation>equals</operation>
        <value>Customer, Prospect, Partner, Known, Non Account Customer</value>
    </summaryFilterItems>
    <summaryForeignKey>Organisation_Role__c.Organisation__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>