force-app/main/default/objects/Account/fields/CustomerType__c.field-meta.xml
<CustomField>
    <fullName>CustomerType__c</fullName>
    <description>SSSW</description>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Organisation Contact</fullName>
            </value>
            <value>
                <fullName>Consumer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>