force-app/main/default/objects/Account/fields/Disclosure_Consent__c.field-meta.xml
<CustomField>
    <fullName>Disclosure_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Capture do not disclosure consent within license record in Salesforce</description>
    <inlineHelpText>Capture do not disclosure consent within license record in Salesforce</inlineHelpText>
    <label>Do Not Disclosure Consent</label>
    <type>Checkbox</type>
</CustomField>