force-app/main/default/objects/Account/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <inlineHelpText>Organisation’s main (generic) business email address. 
Users can edit this field (regardless of whether the organisation is a Prospect or Customer) without having to raise a case to the Data Quality team.</inlineHelpText>
    <label>Org Email</label>
    <type>Email</type>
</CustomField>