force-app/main/default/objects/Account/fields/Equivalent_Points_Description__c.field-meta.xml
<CustomField>
    <fullName>Equivalent_Points_Description__c</fullName>
    <description>A descriptive text to be entered by the person entering amounts for equivalent points</description>
    <label>Equivalent Points Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>