force-app/main/default/objects/Account/fields/Exclude_Subscription_Automation__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Subscription_Automation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will determine if a case record will be excluded in the subscription automation.</description>
    <label>Exclude Scanning Automation</label>
    <type>Checkbox</type>
</CustomField>