force-app/main/default/objects/Account/fields/Facility__c.field-meta.xml
<CustomField>
    <fullName>Facility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Facility associated with this License</description>
    <inlineHelpText>Facility associated with this License</inlineHelpText>
    <label>Facility</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 OR 2 OR 3) AND 4</booleanFilter>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Facility</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Facility CMA</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Facility CPA</value>
        </filterItems>
        <filterItems>
            <field>Account.Licence_Type__c</field>
            <operation>equals</operation>
            <valueField>$Source.Licence_Type__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Licence Assignment</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>