force-app/main/default/objects/Account/fields/Facility_Fitout__c.field-meta.xml
<CustomField>
    <fullName>Facility_Fitout__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is property owned or leased by Australia Post?</description>
    <inlineHelpText>Is property owned or leased by Australia Post?</inlineHelpText>
    <label>Facility Fit out AP Owned</label>
    <type>Checkbox</type>
</CustomField>