force-app/main/default/objects/Account/fields/FrequencyTest__c.field-meta.xml
<CustomField>
    <fullName>FrequencyTest__c</fullName>
    <description>Populated by Workflow Field Update &quot;Update Frequency&quot;</description>
    <inlineHelpText>The minimum frequency the customer should be contacted/visited, in days</inlineHelpText>
    <label>Coverage Frequency in Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>