force-app/main/default/objects/Account/fields/Has_Licence__c.field-meta.xml
<CustomField>
    <fullName>Has_Licence__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag indicating the Legal Entity has one or more Licenses</description>
    <inlineHelpText>Flag indicating the Legal Entity has one or more Licenses</inlineHelpText>
    <label>Has Licence?</label>
    <type>Checkbox</type>
</CustomField>