force-app/main/default/objects/Account/fields/Hidden_Prior_Account_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Hidden_Prior_Account_Manager_Email__c</fullName>
    <description>this hidden field will record the email address of the prior owner, who will receive an email when the account is assigned to someone else.</description>
    <label>{Hidden} Prior Account Manager Email</label>
    <type>Email</type>
</CustomField>