force-app/main/default/objects/Account/fields/Holding_Role_Reference__c.field-meta.xml
<CustomField>
    <fullName>Holding_Role_Reference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Holding Role</label>
    <referenceTo>Holding_Role_Reference__c</referenceTo>
    <relationshipLabel>Holding Role</relationshipLabel>
    <relationshipName>Holding_Role</relationshipName>
    <type>Lookup</type>
</CustomField>