force-app/main/default/objects/Account/fields/Hub_Catchment__c.field-meta.xml
<CustomField>
    <fullName>Hub_Catchment__c</fullName>
    <inlineHelpText>This will be derived from the Hub Catchment Reference table after a Post Code is added in the Physical Address.</inlineHelpText>
    <label>Local Area Market</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ADELAIDE</fullName>
            </value>
            <value>
                <fullName>ALBURY</fullName>
            </value>
            <value>
                <fullName>ALEXANDRIA</fullName>
            </value>
            <value>
                <fullName>ARCHERFIELD</fullName>
            </value>
            <value>
                <fullName>BALLARAT</fullName>
            </value>
            <value>
                <fullName>BALLINA</fullName>
            </value>
            <value>
                <fullName>BATHURST</fullName>
            </value>
            <value>
                <fullName>BAYSWATER</fullName>
            </value>
            <value>
                <fullName>BENDIGO</fullName>
            </value>
            <value>
                <fullName>BIBRA LAKE</fullName>
            </value>
            <value>
                <fullName>BRISBANE CENTRAL</fullName>
            </value>
            <value>
                <fullName>BUNDALL</fullName>
            </value>
            <value>
                <fullName>CAIRNS</fullName>
            </value>
            <value>
                <fullName>CANBERRA</fullName>
            </value>
            <value>
                <fullName>CARINGBAH</fullName>
            </value>
            <value>
                <fullName>COFFS HARBOUR</fullName>
            </value>
            <value>
                <fullName>DANDENONG</fullName>
            </value>
            <value>
                <fullName>FRENCHS FOREST</fullName>
            </value>
            <value>
                <fullName>GEELONG</fullName>
            </value>
            <value>
                <fullName>HOBART</fullName>
            </value>
            <value>
                <fullName>HOPPERS CROSSING</fullName>
            </value>
            <value>
                <fullName>HUNTER</fullName>
            </value>
            <value>
                <fullName>KINGSGROVE</fullName>
            </value>
            <value>
                <fullName>LAUNCESTON</fullName>
            </value>
            <value>
                <fullName>LONSDALE</fullName>
            </value>
            <value>
                <fullName>MACKAY</fullName>
            </value>
            <value>
                <fullName>MACQUARIE PARK</fullName>
            </value>
            <value>
                <fullName>MANSFIELD</fullName>
            </value>
            <value>
                <fullName>MOORABBIN</fullName>
            </value>
            <value>
                <fullName>MORETON BAY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>