force-app/main/default/objects/Account/fields/Impending_Delivery_Changes__c.field-meta.xml
<CustomField>
    <fullName>Impending_Delivery_Changes__c</fullName>
    <description>Impending changes to delivery that may affect the outlet e.g. change to primary sort function</description>
    <inlineHelpText>Impending changes to delivery that may affect the outlet e.g. change to primary sort function</inlineHelpText>
    <label>Impending Delivery Changes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>