force-app/main/default/objects/Account/fields/IndirectCustomer__c.field-meta.xml
<CustomField>
    <fullName>IndirectCustomer__c</fullName>
    <description>This will be stamped with last updated value of “Indirect Customer?” on the opportunity under the Organisation. “Indirect Customer?” on the Opportunity is a formula field based on the picklist value selection for “Has Ownership Over the Freight?” and “Has Control Over Lodgement Facility?”</description>
    <inlineHelpText>This is derived from the most recent Opportunity created or updated</inlineHelpText>
    <label>Indirect Customer?</label>
    <length>18</length>
    <type>Text</type>
</CustomField>