force-app/main/default/objects/Account/fields/Industry_ANZSIC_Override__c.field-meta.xml
<CustomField>
    <fullName>Industry_ANZSIC_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When ticked, the default mapping of Industry, Business Category and Business Subcategory to an ANZSIC code is ignored. This indicates that Marketing has manually overridden the Industry Segmentation for this Organisation</inlineHelpText>
    <label>Industry ANZSIC Override</label>
    <type>Checkbox</type>
</CustomField>