force-app/main/default/objects/Account/fields/Industry_Sub_Sector__c.field-meta.xml
<CustomField>
    <fullName>Industry_Sub_Sector__c</fullName>
    <inlineHelpText>Marketing-based Business Category alignment of Organisation. By default this is mapped to the organisations ANZSIC code, but can be manually realigned by the Marketing Team</inlineHelpText>
    <label>Business Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Industry</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>A Agriculture, Forestry and Fishing</fullName>
            </value>
            <value>
                <fullName>Accommodation &amp; Food</fullName>
            </value>
            <value>
                <fullName>Advertising &amp; Research</fullName>
            </value>
            <value>
                <fullName>Agriculture</fullName>
            </value>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>B Mining</fullName>
            </value>
            <value>
                <fullName>Care Services</fullName>
            </value>
            <value>
                <fullName>C Manufacturing</fullName>
            </value>
            <value>
                <fullName>Construction &amp; Trades</fullName>
            </value>
            <value>
                <fullName>D Electricity, Gas, Water and Waste Services</fullName>
            </value>
            <value>
                <fullName>Delivery Services</fullName>
            </value>
            <value>
                <fullName>E Construction</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Electricity, Gas &amp; Water</fullName>
            </value>
            <value>
                <fullName>Employment</fullName>
            </value>
            <value>
                <fullName>Entertainment</fullName>
            </value>
            <value>
                <fullName>Fashion Apparel &amp; Accessories</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Food &amp; Produce</fullName>
            </value>
            <value>
                <fullName>F Wholesale Trade</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>G Retail Trade</fullName>
            </value>
            <value>
                <fullName>H Accommodation and Food Services</fullName>
            </value>
            <value>
                <fullName>Health, Beauty &amp; Wellbeing</fullName>
            </value>
            <value>
                <fullName>Hobbies &amp; Recreational</fullName>
            </value>
            <value>
                <fullName>Home &amp; Garden</fullName>
            </value>
            <value>
                <fullName>Homeware &amp; Furniture</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>I Transport, Postal and Warehousing</fullName>
            </value>
            <value>
                <fullName>J Information Media and Telecommunications</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>