force-app/main/default/objects/Account/fields/Integration_Id__c.field-meta.xml
<CustomField>
    <fullName>Integration_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Unique Integraton ID - allows for single operation insert of Account+Related objects, and idempotence - thereby preventing duplicates.  Added as part of My Post Business Initiative</description>
    <externalId>true</externalId>
    <label>Integration Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>