force-app/main/default/objects/Account/fields/Integration_Service_Mod_Date__c.field-meta.xml
<CustomField>
    <fullName>Integration_Service_Mod_Date__c</fullName>
    <description>SSSW - Used in SFDC - SAP CRM integration. This field is populated by TIBCO with the datetime that the record was modified in SAP CRM.</description>
    <label>Integration Service Mod Date</label>
    <type>DateTime</type>
</CustomField>