force-app/main/default/objects/Account/fields/Is_a_facility__c.field-meta.xml
<CustomField>
    <fullName>Is_a_facility__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determine if this account is an Australia Post retail outlet</description>
    <label>Is a facility?</label>
    <type>Checkbox</type>
</CustomField>