force-app/main/default/objects/Account/fields/Is_Strategic_Account_StarTrack__c.field-meta.xml
<CustomField>
    <fullName>Is_Strategic_Account_StarTrack__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The field is used to indicate that the Organisation is StarTrack Strategic Account.</description>
    <label>Is Strategic Account - StarTrack</label>
    <type>Checkbox</type>
</CustomField>