force-app/main/default/objects/Account/fields/IsStrategicSupportCustomer__c.field-meta.xml
<CustomField>
    <fullName>IsStrategicSupportCustomer__c</fullName>
    <formula>OR(
        ISPICKVAL(Sales_Segment__c, &apos;Enterprise &amp; Strategic Financial &amp; Insurance&apos;),
        ISPICKVAL(Sales_Segment__c, &apos;Enterprise &amp; Strategic NSW 1&apos;),
        ISPICKVAL(Sales_Segment__c, &apos;Enterprise &amp; Strategic NSW 2&apos;),
        ISPICKVAL(Sales_Segment__c, &apos;Enterprise &amp; Strategic QLD&apos;),
        ISPICKVAL(Sales_Segment__c, &apos;Enterprise &amp; Strategic VIC 1&apos;),
        ISPICKVAL(Sales_Segment__c, &apos;Enterprise &amp; Strategic VIC 2&apos;),
        ISPICKVAL(Sales_Segment__c, &apos;Enterprise &amp; Strategic VIC 3&apos;),
        ISPICKVAL(Sales_Segment__c, &apos;Lost to Competitor - Enterprise &amp; Strategic&apos;)
    )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Strategic Support Customer</label>
    <type>Checkbox</type>
</CustomField>