force-app/main/default/objects/Account/fields/IsVIP__c.field-meta.xml
<CustomField>
    <fullName>IsVIP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to capture if customer is VIP</description>
    <label>VIP</label>
    <type>Checkbox</type>
</CustomField>