force-app/main/default/objects/Account/fields/L2C_Approved_AP_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>L2C_Approved_AP_Credit_Limit__c</fullName>
    <label>Australia Post Approved Credit Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>