force-app/main/default/objects/Account/fields/Last_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_Date__c</fullName>
    <description>used by Task and Event triggers to store the last closed task or forward planned event for an associated Account</description>
    <inlineHelpText>Automatically generated date based on the date of last activity (task/event) on the organisation</inlineHelpText>
    <label>Last Activity Date_old</label>
    <type>Date</type>
</CustomField>