force-app/main/default/objects/Account/fields/LEGACY_ID__c.field-meta.xml
<CustomField>
    <fullName>LEGACY_ID__c</fullName>
    <description>This field captures the unique identifier from the legacy application, eg SAP CRM. It is expected to be populated during the initial data load and also used for ongoing integration.</description>
    <externalId>true</externalId>
    <inlineHelpText>This is the SAP Customer ID.</inlineHelpText>
    <label>LEGACY ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>