force-app/main/default/objects/Account/fields/Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Name__c</fullName>
    <inlineHelpText>The organisation’s name that appears on all official documents or legal papers.</inlineHelpText>
    <label>Legal Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>